# structnom

./: Cargo.toml
examples/: basic.rs  gen.rs  generate.rs  ipv4header.rs
src/: attr.rs  config.rs  fields.rs  gen_trait.rs  lib.rs  struct.rs  trait_gen.rs
src/attribute/: post.rs
src/attrs/: attrs.rs  mod.rs
structnom/: Cargo.toml
structnom-derive/: Cargo.toml
structnom-derive/examples/: gen.rs
structnom-derive/src/: attr.rs  gen.rs  gen_trait.rs  lib.rs  trait.rs
structnom-derive/src/attribute/: arm.rs  mod.rs  post.rs  pre.rs  value.rs
structnom/src/: lib.rs  nom_trait.rs
