[package]
name = "structnom"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[[example]]
name = "gen"
path = "./examples/gen.rs"

[[example]]
name = "ipv4"
path = "./examples/ipv4header.rs"

[dependencies]
nom = "4.2.3"
syn = { version = "*", features = ["derive", "extra-traits", "full"] }
quote = "*"
proc-macro2 = "*"
log = "*"