[package]
name = "structnom-derive"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[[example]]
name = "generate"
path = "../examples/generate.rs"

[[example]]
name = "ipv4header"
path = "./examples/ipv4header.rs"

[dependencies]
nom = "*"
syn = { version = "*", features = ["derive", "extra-traits", "full"] }
quote = "*"
proc-macro2 = "*"
log = "*"